@@ -1,6 +1,8 @@
   --------------------------  HepMC3.2.6 ----------------------
+2023-03-30 Andrii Verbytskyi for HepMC
+         * Deprecated the cross-section functions with double.
 2023-03-03 Andrii Verbytskyi for HepMC
-         * Preparation to the rease 3.2.6.
+         * Preparation to the release 3.2.6.
 2023-03-03 Andrii Verbytskyi for HepMC
          * Better Doxygen documentation for code
 2023-03-02 Andrii Verbytskyi for HepMC
